--- a/index.html
+++ b/index.html
@@ -1,53 +1,43 @@
 <!DOCTYPE html>
--<html lang="en">
-+<html lang="en-US">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
--  <title>Document</title>
-+  <title>CS CLub Events</title>
-+  <style>
-+    section#calendar {
-+      width: 50%;
-+      float: left;
-+    }
-+    section#eventdescription {
-+      width: 50%;
-+      float: right;
-+    }
-+    h1 {text-align:center;}
-+  </style>
- </head>
--<body>
- 
-+<body>
-+  <h1>Events Page</h1>
-+  <section id="calendar">
-+    <!--Calendar left side of page-->
-+    <p>
-+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
-+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
-+    </p>
-+  </section>
-+  <section id="eventdescription">
-+    <!--Event description right side of page-->
-+    <p>
-+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
-+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
-+    </p>
-+  </section>
-+  <hr>
-+  <section id="request event">
-+    <!--Request event form-->
-+    <h1>Request Event Form</h1>
-<br><br><br>
-<form action="/action_page.php">
-  	<input type="text" value="Email Adress"> 
-  <form action="/action_page.php">
-  	<input type="submit"  value="Submit">
-  <br>
-  
-+  </section>
- </body>
- </html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CS CLub Events</title>
+  <style>
+    section#calendar {
+      width: 50%;
+      float: left;
+    }
+    section#eventdescription {
+      width: 50%;
+      float: right;
+    }
+    h1 {text-align:center;}
+  </style>
+</head>
+
+<body>
+  <h1>Events Page</h1>
+  <section id="calendar">
+    <!--Calendar left side of page-->
+    <p>
+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
+    </p>
+  </section>
+  <section id="eventdescription">
+    <!--Event description right side of page-->
+    <p>
+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text 
+    </p>
+  </section>
+  <hr>
+  <section id="request event">
+    <!--Request event form-->
+    <h1>Request Event Form</h1>
+  </section>
+</body>
+</html>
