--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     }
     h1 {text-align:center;}
     hr {clear: both;}
-    body {margin:10%;padding:0}
+    body {
+      margin-left:20%;
+      margin-right:20%;
+    }
   </style>
 </head>
 
@@ -27,7 +30,8 @@
   <section id="calendar_section">
     <!--Calendar left side of page-->
     <div class="auto-jsCalendar blue" data-zero-fill="true" data-month-format="month YYYY"
-        data-day-format="DDD" align="right"></div>
+        data-day-format="DDD" align="center"></div>
+    <br>
   </section>
   <section id="event_description_section">
     <!--Event description right side of page-->
@@ -40,13 +44,20 @@
     <button>RSVP</button>
   </section>
   <hr>
-  <section id="request_event_section">
+  <section id="request_event_section" style="padding: 5%">
     <!--Request event form-->
     <h1>Request Event Form</h1>
-    <textarea>Enter Event Description</textarea>
-    <br>
-    <textarea>Enter Contact Email</textarea>
-    <button>Submit</button>
+    <form>
+      <!-- Need to add an action to the form tag so we can collect the input-->
+      Enter Event Description:
+      <br> 
+      <textarea name="eventdescription" placeholder="Enter event description..." style="height:200px; width:100%"></textarea>
+      <br>
+      Enter Contact Email:
+      <br>
+      <input type="text" name = "contactemail">
+      <input type="submit" value="Submit">
+    </form>
   </section>
 </body>
 </html>
