--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </p>
 
     <form>
-      <input type="text" name = "Name">
+      <input type="text" name = "Name" placeholder="Enter your Name">
       <input type="submit" value="RSVP">
 
   </form>
