--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CS CLub Events</title>
+  <title>CS Club Events</title>
   <link rel="stylesheet" type="text/css" href="jsCalendar/source/jsCalendar.css">
   <script type="text/javascript" src="jsCalendar/source/jsCalendar.js"></script>
   <style>
@@ -38,7 +38,7 @@
     <h2 id="event_title">Event Title</h2>
     <p id="event_description">
         sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text
-        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text
+        sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text
     </p>
 
     <form>
